# ohkami-aichat

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  wrangler.toml
migrations/: 0001_schema.sql
src/: server.rs
src/api/: errors.rs  mod.rs  repository.rs  utils.rs
src/models/: mod.rs  openai.rs
src/ui/: fetch.rs
